# python-frank-energie

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  README.md  environment.yml  example.py  graphql.config.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  linting.yaml  pylint.yml  python-package-conda.yml  python-package.yml  pyupgrade.yml  release-drafter.yaml  release.yaml  requirements.txt  run_query.yml
.mypy_cache/3.12/: _ast.data.json  _ast.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _contextvars.data.json  _contextvars.meta.json  _ctypes.data.json  _ctypes.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _io.data.json  _io.meta.json  _pickle.data.json  _pickle.meta.json  _queue.data.json  _queue.meta.json  _sitebuiltins.data.json  _sitebuiltins.meta.json  _socket.data.json  _socket.meta.json  _weakrefset.data.json  _weakrefset.meta.json  abc.data.json  abc.meta.json  ast.data.json  ast.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  contextlib.data.json  contextlib.meta.json  copyreg.data.json  copyreg.meta.json  dataclasses.data.json  dataclasses.meta.json  (+36 more)
.mypy_cache/3.12/_typeshed/: __init__.data.json  __init__.meta.json  importlib.data.json  importlib.meta.json
.mypy_cache/3.12/asyncio/: coroutines.data.json  coroutines.meta.json  exceptions.data.json  exceptions.meta.json  threads.data.json  threads.meta.json  timeouts.data.json  timeouts.meta.json
.mypy_cache/3.12/collections/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json
.mypy_cache/3.12/concurrent/: __init__.data.json  __init__.meta.json
.mypy_cache/3.12/ctypes/: __init__.data.json  __init__.meta.json  _endian.data.json  _endian.meta.json
.mypy_cache/3.12/email/: __init__.data.json  __init__.meta.json  _policybase.data.json  _policybase.meta.json  charset.data.json  charset.meta.json  contentmanager.data.json  contentmanager.meta.json  errors.data.json  errors.meta.json  header.data.json  header.meta.json  message.data.json  message.meta.json  policy.data.json  policy.meta.json
.mypy_cache/3.12/importlib/: __init__.data.json  __init__.meta.json  _abc.data.json  _abc.meta.json  _bootstrap.data.json  _bootstrap.meta.json  _bootstrap_external.data.json  _bootstrap_external.meta.json  abc.data.json  abc.meta.json  machinery.data.json  machinery.meta.json  readers.data.json  readers.meta.json
.mypy_cache/3.12/importlib/metadata/: __init__.data.json  __init__.meta.json  _meta.data.json  _meta.meta.json
.mypy_cache/3.12/importlib/resources/: __init__.data.json  __init__.meta.json  _common.data.json  _common.meta.json  abc.data.json  abc.meta.json
.mypy_cache/3.12/multiprocessing/: process.data.json  process.meta.json  queues.data.json  queues.meta.json  shared_memory.data.json  shared_memory.meta.json  spawn.data.json  spawn.meta.json
.mypy_cache/3.12/os/: __init__.data.json  __init__.meta.json  path.data.json  path.meta.json
.mypy_cache/3.12/sys/: __init__.data.json  __init__.meta.json  _monitoring.data.json  _monitoring.meta.json
.mypy_cache/3.12/zipfile/: __init__.data.json  __init__.meta.json
.mypy_cache/3.12/zipfile/_path/: __init__.data.json  __init__.meta.json
.trunk/: trunk.yaml
frank_energie/: __init__.py  frank_energie.py  models.py
python_frank_energie/: __init__.py  authentication.py  exceptions.py  frank_energie.py  models.py  time_periods.py
scripts/: test_query.py
tests/: __init__.py  test_frank_energie.py  test_models.py  test_smart_batteries.py
tests/__snapshots__/: test_frank_energie.ambr  test_models.ambr  test_smart_batteries.ambr
tests/fixtures/: authentication.json  customer_market_prices.json  invoices.json  market_prices.json  me.json  month_summary.json  response_with_error.json  smart_batteries.json  smart_battery_sessions.json  user.json
