[tool.poetry]
name = "python-frank-energie"
version = "0.1.0-alpha"
description = "Asynchronous Python client for the Frank Energie"
authors = ["DCSBL"]
maintainers = ["DCSBL"]
license = "Apache License 2.0"
readme = "README.md"
homepage = "https://github.com/dcsbl/python-frank-energie"
repository = "https://github.com/dcsbl/python-frank-energie"
documentation = "https://github.com/dcsbl/python-frank-energie"
classifiers = [
]
packages = [
    { include = "frank_energie" },
]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = ">=3.8.0"
python-dateutil = ">=2.8.0"

[tool.poetry.dev-dependencies]
aresponses = "^2.1.6"
black = "^22.12"
blacken-docs = "^1.13.0"
flake8 = "^4.0.1"
flake8-docstrings = "^1.5.0"
isort = "^5.11.4"
pre-commit = "^2.21.0"
pre-commit-hooks = "^4.4.0"
pylint = "^2.15.10"
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
pytest-cov = "^4.0.0"
yamllint = "^1.29.0"
pyupgrade = "^3.3.1"
flake8-simplify = "^0.19.3"
vulture = "^2.7"
flake8-bandit = "^3.0.0"
flake8-bugbear = "^23.1.17"
flake8-builtins = "^2.1.0"
flake8-comprehensions = "^3.10.0"
flake8-eradicate = "^1.2.1"
flake8-markdown = "^0.3.0"
darglint = "^1.8.1"
safety = "^2.3.5"
codespell = "^2.2.2"
bandit = "^1.7.3"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/dcsbl/python-frank-energie/issues"
Changelog = "https://github.com/dcsbl/python-frank-energie/releases"

[tool.black]
target-version = ['py39']

[tool.coverage.paths]
source = ["frank_energie"]

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]

[tool.coverage.run]
branch = true
source = ["frank_energie"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pylint.BASIC]
good-names = [
    "_",
    "ex",
    "fp",
    "i",
    "id",
    "j",
    "k",
    "on",
    "Run",
    "T",
]

[tool.pylint."MESSAGES CONTROL"]
disable= [
    "too-few-public-methods",
    "duplicate-code",
    "format",
    "unsubscriptable-object",
]

[tool.pylint.SIMILARITIES]
ignore-imports = true

[tool.pylint.FORMAT]
max-line-length=120

[tool.pylint.DESIGN]
max-attributes=20

[tool.pytest.ini_options]
addopts = "--cov"

[tool.vulture]
min_confidence = 80
paths = ["frank_energie"]
verbose = true

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
