[tool.poetry]
name = "python-frank-energie"
version = "3.0.0"
description = "Asynchronous Python client for the Frank Energie"
authors = ["DCSBL"]
maintainers = ["DCSBL"]
license = "Apache License 2.0"
readme = "README.md"
homepage = "https://github.com/dcsbl/python-frank-energie"
repository = "https://github.com/dcsbl/python-frank-energie"
documentation = "https://github.com/dcsbl/python-frank-energie"
classifiers = [
]
packages = [
    { include = "python_frank_energie" },
]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = ">=3.8.0"
python-dateutil = ">=2.8.0"
PyJWT = ">=2.8.0"

[tool.poetry.dev-dependencies]
aresponses = "^2.1.6"
black = "^22.12"
blacken-docs = "^1.15.0"
flake8 = "^4.0.1"
flake8-docstrings = "^1.5.0"
isort = "^5.13.2"
pre-commit = "^3.6.0"
pre-commit-hooks = "^4.4.0"
pylint = "^3.0.3"
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
pyupgrade = "^3.9.0"
flake8-simplify = "^0.21.0"
vulture = "^2.7"
flake8-bandit = "^3.0.0"
flake8-bugbear = "^23.3.12"
flake8-builtins = "^2.1.0"
flake8-comprehensions = "^3.14.0"
flake8-eradicate = "^1.2.1"
flake8-markdown = "^0.3.0"
freezegun = "^1.4.0"
darglint = "^1.8.1"
safety = "^2.3.5"
codespell = "^2.2.5"
bandit = "^1.7.6"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/dcsbl/python-frank-energie/issues"
Changelog = "https://github.com/dcsbl/python-frank-energie/releases"

[tool.black]
target-version = ['py39']

[tool.coverage.paths]
source = ["python_frank_energie"]

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]

[tool.coverage.run]
branch = true
source = ["python_frank_energie"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pylint.BASIC]
good-names = [
    "_",
    "ex",
    "fp",
    "i",
    "id",
    "j",
    "k",
    "on",
    "Run",
    "T",
]

[tool.pylint."MESSAGES CONTROL"]
disable= [
    "too-few-public-methods",
    "duplicate-code",
    "format",
    "unsubscriptable-object",
]

[tool.pylint.SIMILARITIES]
ignore-imports = true

[tool.pylint.FORMAT]
max-line-length=120

[tool.pylint.DESIGN]
max-attributes=20

[tool.pytest.ini_options]
addopts = "--cov"

[tool.vulture]
min_confidence = 80
paths = ["python_frank_energie"]
verbose = true

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
